# olympus

./: .gitignore  .pre-commit-config.yaml  README.md  README.template.md  app.js  package-lock.json  package.json  paris-2024-sites-de-competition.csv  pyproject.toml
public/css/: style.css
public/js/: classes.js  constants.js  functions.js  getGeojson.js  index.js  readCSV.js
public/src/: leaflet-search.css  leaflet-search.js
script/: generate_readme.py
views/: index.ejs
