[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
readme = ["docdocdoc"]
pre-commit = ["pre-commit"]

[tool.isort]
format = "black"